example/base/app/service.yaml
apiVersion: 'v1'
kind: 'Service'
metadata:
  name: 'governor'
spec:
  ports:
    - name: 'http'
      port: 8080
  selector:
    app: 'governor'
