example/base/app/ingressroute.yaml
apiVersion: 'traefik.containo.us/v1alpha1'
kind: 'IngressRoute'
metadata:
  name: 'governor'
spec:
  entryPoints:
    - 'web'
  routes:
    - kind: 'Rule'
      match: 'Host(`governor.dev.home`) || Host(`go.governor.dev.home`)'
      services:
        - kind: 'Service'
          scheme: 'http'
          name: 'governor'
          port: 8080
