example/base/app/virtualservice.yaml
apiVersion: 'networking.istio.io/v1alpha3'
kind: 'VirtualService'
metadata:
  name: 'governor'
spec:
  gateways:
    - 'istio-system/istio-gateway'
  hosts:
    - 'governor.dev.home'
    - 'go.governor.dev.home'
  http:
    - route:
        - destination:
            host: 'governor'
            port:
              number: 8080
